package/compiling_error.txt
clang: warning: treating 'c-header' input as 'c++-header' when in C++ mode, this behavior is deprecated
In file included from /Users/ris/prengine/package/cond_ast.h:13:
/Users/ris/prengine/package/prengine_val.h:28:20: warning: in-class initialization of non-static data member is a C++11 extension [-Wc++11-extensions]
    bool undefined = false;
                   ^
/Users/ris/prengine/package/cond_ast.h:37:6: error: variable has incomplete type 'void'
void print_cond_ast(queue<cond_node *>rootq);
     ^
/Users/ris/prengine/package/cond_ast.h:37:21: error: use of undeclared identifier 'queue'
void print_cond_ast(queue<cond_node *>rootq);
                    ^
/Users/ris/prengine/package/cond_ast.h:37:27: error: 'cond_node' does not refer to a value
void print_cond_ast(queue<cond_node *>rootq);
                          ^
/Users/ris/prengine/package/cond_ast.h:19:8: note: declared here
struct cond_node{
       ^
/Users/ris/prengine/package/cond_ast.h:37:38: error: expected expression
void print_cond_ast(queue<cond_node *>rootq);
                                     ^
/Users/ris/prengine/package/cond_ast.h:37:39: error: use of undeclared identifier 'rootq'
void print_cond_ast(queue<cond_node *>rootq);
                                      ^
1 warning and 5 errors generated.
